2004-08-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-mytown.el (shimbun-asahi-mytown-get-headers):
	Use shimbun-create-header instead of shimbun-make-header.
	cf. <URL:http://emacs-w3m.namazu.org/ml/msg05438.html>.

	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Ditto.
	* shimbun/sb-kantei.el (shimbun-get-headers): Ditto.
	* shimbun/sb-sankei.el (shimbun-get-headers): Ditto.
	* shimbun/sb-yomiuri.el (shimbun-yomiuri-get-headers): Ditto.

2004-07-31  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-rss.el (shimbun-rss-node-text): Fix regexp.
	* shimbun/sb-haiku-os.el: New module.

2004-08-02  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el (slanted): Rename @s to @slanted.

2004-08-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Simplify
	removing of `<...>'s in the kansai-special group.

2004-07-30  Romain Francoise <romain@orebokech.com>

	Enable emacs-w3m to be built with Emacs --without-x.

	* w3m-e21.el (image-size): Alias to ignore if it is not available.

	* w3m-favicon.el (w3m-favicon-type): Don't use image-types if it
	is not available.

	* w3m.el (mouse-set-point): Autoload mouse.elc.

2004-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Allow a subject
	to contain `<...>'s.
	(shimbun-asahi-get-headers): Use w3m-fontify to remove `<...>'s
	from a subject when parsing the kansai-special group.

2004-07-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
	NOMIYA Masaru <nomiya@ttmy.ne.jp>,
	Katsumi Yamaoka <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-group-table): Replace
	kagaku with kagaku.science, kagaku.env and kagaku.medical groups.
	(shimbun-index-url): Replace . with / in group names.

	* shimbun/shimbun.el (shimbun-subst-char-in-string): New function.

2004-07-20  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Support @s.

2004-07-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
